Set z-index of time-picker to 1 as a fix for warning popover overlaying it

--- a/packages/trader/src/sass/app/_common/form/time-picker.scss
+++ b/packages/trader/src/sass/app/_common/form/time-picker.scss
@@ -27,7 +27,7 @@
         transform: scale(1, 0) translate3d(0, 0, 0);
         transition: transform 0.25s ease, opacity 0.25s linear;
         width: 231px;
-        z-index: 1;
+        z-index: 2;
         background-color: var(--general-main-2);
 
         &--enter, &--exit {
